# bench_matrix

./: API_REFERENCE.md  Cargo.toml  README.USAGE.md  README.md
benches/: async.rs  sync.rs
src/: generator.rs  lib.rs  params.rs
src/criterion_runner/: async_suite.rs  mod.rs  sync_suite.rs
