[package]
name = "bench_matrix"
version = "0.1.0"
edition = "2021"
authors = ["Excerion Sun <dev@excsn.com>"]
description = "A utility crate for defining and running parameterized benchmarks, with optional Criterion integration."
license = "MPL-2.0"
repository = "https://github.com/excsn/bench_matrix"
readme = "README.md"
keywords = ["benchmark", "criterion", "matrix", "parameterized"]
categories = ["development-tools::testing"]

[dependencies]
itertools = "^0.12"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"], optional = true }
criterion = { version = "^0.5", features = ["async_tokio"], optional = true }
rand = { version =" ^0.9" }

[features]
full = ["criterion_integration"]
default = ["criterion_integration"]
criterion_integration = ["dep:criterion", "tokio"]

# [dev-dependencies]

[[bench]]
name = "async"
harness = false
required-features = ["criterion_integration"]

[[bench]]
name = "sync"
harness = false
required-features = ["criterion_integration"]